--- a/index.html
+++ b/index.html
@@ -180,10 +180,6 @@ Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing
 <p>
 Examining western boundary current variability using a consistent multi-platform approach. (2022). <i>Ocean Sciences Meeting 2022.</i> <a href="slides/Chandler_OSM2022.pdf">[slides]</a>
 </p>
-
-<!-- Testing embedding a video -->
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/NyfXeflrD_A?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
 <p>
 Western boundary current research using Argo, HR-XBT, and satellite altimetry. (2021). <i>12th Observation Coordination Group Workshop: Boundary Currents.</i>
 </p>
@@ -207,6 +203,11 @@ A multi-platform approach to examining variability in the Kuroshio off the coast
 <p> 
 Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. (2020). <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">[pdf]</a>
 </p>
+
+<h3>Presentation Recordings</h3>
+<!-- Testing embedding a video -->
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/NyfXeflrD_A?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
+
 
 </div>
 
