--- a/index.html
+++ b/index.html
@@ -206,8 +206,10 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 
 <h3>Presentation Recordings</h3>
 <!-- Testing embedding a video -->
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/NyfXeflrD_A?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
+<h4>Placeholder video while I test</h4>
+<iframe height="200" src="https://www.youtube-nocookie.com/embed/NyfXeflrD_A?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
 
+<h5>Ocean Sciences Meeting 2020</h5>
 
 </div>
 
