--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-h1,h2,h3,h4 {color: rgb(220, 220, 220)}
+h1,h2,h3,h4,h5 {color: rgb(220, 220, 220)}
 p,ul {font-size: 1em;
 	color: rgb(200, 200, 200)}
 a { text-decoration: none; 
@@ -204,10 +204,19 @@ A multi-platform approach to examining variability in the Kuroshio off the coast
 Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. (2020). <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">[pdf]</a>
 </p>
 
-<h3>Presentation Recordings</h3>
+</div>
+
+
+
+<!-- Education -->
+<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="education">
+
+<h2>Presentation Recording</h2>
+<hr style="width:200px" class="w3-opacity">
+
 <!-- Testing embedding a video -->
 <h4>Placeholder video while I test</h4>
-<iframe height="200" src="https://www.youtube-nocookie.com/embed/NyfXeflrD_A?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
+<iframe src="https://www.youtube-nocookie.com/embed/NyfXeflrD_A?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
 
 <h5>Ocean Sciences Meeting 2020</h5>
 
