--- a/index.html
+++ b/index.html
@@ -208,15 +208,17 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 
 
 
-<!-- Education -->
-<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="education">
+<!-- Presentation Recordings -->
+<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="recordings">
 
-<h2>Presentation Recording</h2>
+<h2>Presentation Recordings</h2>
 <hr style="width:200px" class="w3-opacity">
 
-<!-- Testing embedding a video -->
-<h4>Placeholder video while I test</h4>
-<iframe src="https://www.youtube-nocookie.com/embed/NyfXeflrD_A?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
+<h5>Placeholder video while I test</h5>
+<iframe height="300" src="https://www.youtube-nocookie.com/embed/NyfXeflrD_A?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
+
+<h5>Placeholder video while I test2</h5>
+<iframe width="100vw" height="50vh" src="https://www.youtube-nocookie.com/embed/NyfXeflrD_A?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <h5>Ocean Sciences Meeting 2020</h5>
 
