--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
@@ -45,13 +46,18 @@ img.head-image { width: 100%;
 	</a>
    
 	<a href="#education" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-	<i class="	fa fa-lightbulb-o w3-xlarge"></i>
+	<i class="fa fa-lightbulb-o w3-xlarge"></i>
 	<p>EDUCATION</p>
 	</a>
 	
 	<a href="#publications" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
 	<i class="fa fa-book w3-xlarge"></i>
 	<p>PUBLICATIONS</p>
+	</a>
+	
+	<a href="#recordings" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="ondemand_video w3-xlarge"></i>
+	<p>Presentation Recordings</p>
 	</a>
 
 	<a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
@@ -94,6 +100,7 @@ img.head-image { width: 100%;
 			<a href="#about" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">About</a>
 			<a href="#education" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Education</a>
 			<a href="#publications" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Publications</a>
+			<a href="#recordings" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Presentation Recordings</a>
 			<a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Twitter Posters</a>
 			<a href="#gallery" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Academic Gallery</a>
 		</div>
