--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
@@ -56,8 +56,8 @@ img.head-image { width: 100%;
 	</a>
 	
 	<a href="#recordings" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-	<i class="ondemand_video w3-xlarge"></i>
-	<p>Presentation Recordings</p>
+	<i class="fa fa-file-video-o w3-xlarge"></i>
+	<p>PRESENTATION RECORDINGS</p>
 	</a>
 
 	<a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
