--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@ img.head-image { width: 100%;
 	<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
 	<i class="material-icons w3-xlarge">school</i>
 	</a>
+	
+	<a href="https://www.youtube.com/" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="fa fa-youtube-play w3-xlarge"></i>
+	</a>
 </nav>
 
 
