--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@ img.head-image { width: 100%;
 		<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="material-icons w3-xlarge">school</i></a>
 		<a href="https://twitter.com/nz_mitch" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-twitter"></i></a>    
 		<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-github"></i></a>    
+		<a href="https://www.youtube.com/" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-youtube-play"></i></a>
 		
 		<div id="navSmall" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
 			<a href="#about" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">About</a>
 			<a href="#education" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Education</a>
 			<a href="#publications" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Publications</a>
-			<a href="#recordings" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Presentation Recordings</a>
+			<a href="#recordings" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Recordings</a>
 			<a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Twitter Posters</a>
 			<a href="#gallery" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Academic Gallery</a>
 		</div>
