--- a/index.html
+++ b/index.html
@@ -68,6 +68,24 @@ img.head-image { width: 100%;
 	<i class="fa fa-photo w3-xlarge"></i>
 	<p>ACADEMIC GALLERY</p>
 	</a>
+	
+	<hr style="width:100%" class="w3-opacity">
+	
+	<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="material-icons w3-xlarge">school</i>
+	</a>
+		
+	<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="fa fa-github-square w3-xlarge"></i>
+	</a>
+		
+	<a href="https://www.youtube.com/" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="fa fa-youtube-play w3-xlarge"></i>
+	</a>
+	
+	<a href="https://twitter.com/nz_mitch" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+	<i class="fa fa-twitter-square w3-xlarge"></i>
+	</a>
 </nav>
 
 
@@ -102,6 +120,17 @@ img.head-image { width: 100%;
 <!-- Header/Home -->
 <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
 	<h1 class="w3-jumbo">Mitchell Chandler</h1>
+	<p><a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-large w3-hover-black w3-hide-small">
+	<i class="material-icons w3-xlarge">school</i>
+	</a>
+	<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-large w3-hover-black w3-hide-small">
+	<i class="fa fa-github-square w3-xlarge"></i>
+	</a>
+	<a href="https://www.youtube.com/" class="w3-bar-item w3-button w3-padding-large w3-hover-black w3-hide-small">
+	<i class="fa fa-youtube-play w3-xlarge"></i>
+	</a>
+	<a href="https://twitter.com/nz_mitch" class="w3-bar-item w3-button w3-padding-large w3-hover-black w3-hide-small">
+	<i class="fa fa-twitter-square w3-xlarge"></i></p>
 	<p>mlchandler@ucsd.edu</p>	
 	<img src="/images/MC_header.jpg" class="head-image">
 </header>
