--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <iframe height="300" src="https://www.youtube-nocookie.com/embed/NyfXeflrD_A?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
 
 <h5>Ocean Sciences Meeting 2020</h5>
-<iframe width="300" src="https://www.youtube-nocookie.com/embed/6pUlNjiFMSU?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
+<iframe height="300" src="https://www.youtube-nocookie.com/embed/6pUlNjiFMSU?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
 
 </div>
 
