--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ a:hover { text-decoration: underline; }
 img.head-image { width: 100%;max-width: 600px; }
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 150px */
-.w3-sidebar {width: 130px;background: #222;position:absolute; top:0; left:0; bottom:0}
+.w3-sidebar {width: 120px;background: #222;}
 /* Add a left margin to the "page content" that matches the width of the sidebar (150px) */
-#main {margin-left: 130px}
+#main {margin-left: 120px}
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
 </style>
