--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ a:hover { text-decoration: underline; }
 img.head-image { width: 100%;max-width: 600px; }
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 150px */
-.w3-sidebar {width: 120px;background: #222;}
+.w3-sidebar {width: 150px;background: #222;}
 /* Add a left margin to the "page content" that matches the width of the sidebar (150px) */
-#main {margin-left: 120px}
+#main {margin-left: 150px}
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
 </style>
@@ -33,37 +33,37 @@ img.head-image { width: 100%;max-width: 600px; }
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
 	<img src="/images/MC_headshot.jpg" style="width:100%">
 
-	<a href="#" class="w3-bar-item w3-button w3-padding w3-hover-black">
+	<a href="#" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
 	<i class="fa fa-home w3-xlarge"></i>
 	<p>HOME</p>
 	</a>
   
-	<a href="#about" class="w3-bar-item w3-button w3-padding w3-hover-black">
+	<a href="#about" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
 	<i class="fa fa-user w3-xlarge"></i>
 	<p>ABOUT</p>
 	</a>
    
-	<a href="#education" class="w3-bar-item w3-button w3-padding w3-hover-black">
+	<a href="#education" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
 	<i class="fa fa-lightbulb-o w3-xlarge"></i>
 	<p>EDUCATION</p>
 	</a>
 	
-	<a href="#publications" class="w3-bar-item w3-button w3-padding w3-hover-black">
+	<a href="#publications" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
 	<i class="fa fa-book w3-xlarge"></i>
 	<p>PUBLICATIONS</p>
 	</a>
 	
-	<a href="#recordings" class="w3-bar-item w3-button w3-padding w3-hover-black">
+	<a href="#recordings" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
 	<i class="fa fa-video-camera w3-xlarge"></i>
 	<p>RECORDINGS</p>
 	</a>
 
-	<a href="#twitter_posters" class="w3-bar-item w3-button w3-padding w3-hover-black">
+	<a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
 	<i class="fa fa-twitter w3-xlarge"></i>
 	<p>TWITTER POSTERS</p>
 	</a>
 	
-	<a href="#gallery" class="w3-bar-item w3-button w3-padding w3-hover-black">
+	<a href="#gallery" class="w3-bar-item w3-button w3-padding-small w3-hover-black">
 	<i class="fa fa-photo w3-xlarge"></i>
 	<p>ACADEMIC GALLERY</p>
 	</a>
