--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@ Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing
 Examining western boundary current variability using a consistent multi-platform approach. (2022). <i>Ocean Sciences Meeting 2022.</i> <a href="slides/Chandler_OSM2022.pdf">[slides]</a>
 </p>
 <p>
+From the sea to the stars: how combining ocean observing systems can help us study ocean currents. (2022). <i>SIO WMIS Student Seminar Series</i>
+</p>
+<p>
 Western boundary current research using Argo, HR-XBT, and satellite altimetry. (2021). <i>12th Observation Coordination Group Workshop: Boundary Currents.</i>
 </p>
 <p> 
