--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@ Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing
 
 <h3>Talks</h3>
 <p>
-Examining western boundary current variability using a consistent multi-platform approach. (2022). <i>Ocean Sciences Meeting 2022.</i> <a href="slides/Chandler_OSM2022.pdf">[slides]</a>
+Examining western boundary current variability using a consistent multi-platform approach. (2022). <i>Ocean Sciences Meeting 2022.</i> <a href="slides/Chandler_OSM2022.pdf">[slides]</a> <a href="https://www.youtube.com/watch?v=6pUlNjiFMSU">[youtube]</a>
 </p>
 <p>
-From the sea to the stars: how combining ocean observing systems can help us study ocean currents. (2022). <i>SIO WMIS Student Seminar Series</i>
+From the sea to the stars: how combining ocean observing systems can help us study ocean currents. (2022). <i>SIO WMIS Student Seminar Series.</i>
 </p>
 <p>
 Western boundary current research using Argo, HR-XBT, and satellite altimetry. (2021). <i>12th Observation Coordination Group Workshop: Boundary Currents.</i>
