grad slam submission link

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing
 
 <h3>Talks</h3>
 <p>
-The arteries and veins of our ocean. (2022). <i>UC San Diego Grad Slam 2022.</i> <span style="color: #FFD700">*Finalist*</span> <a href="slides/Chandler_GradSlam2022.pdf">[slides]</a>
+The arteries and veins of our ocean. (2022). <i>UC San Diego Grad Slam 2022.</i> <span style="color: #FFD700">*Finalist*</span> <a href="slides/Chandler_GradSlam2022.pdf">[slides]</a> <a href="https://youtu.be/Ypyz2wVxun4">[youtube]</a>
 </p>
 <p>
 Examining western boundary current variability using a consistent multi-platform approach. (2022). <i>Ocean Sciences Meeting 2022.</i> <a href="slides/Chandler_OSM2022.pdf">[slides]</a> <a href="https://www.youtube.com/watch?v=6pUlNjiFMSU">[youtube]</a>
