--- a/index.html
+++ b/index.html
@@ -220,7 +220,10 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <h2>Presentation Recordings</h2>
 <hr style="width:200px" class="w3-opacity">
 
-<h5>Ocean Sciences Meeting 2020</h5>
+<h5>UC San Diego Grad Slam 2022 Preliminaries</h5>
+<iframe height="300" src="https://www.youtube-nocookie.com/embed/Ypyz2wVxun4?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
+
+<h5>Ocean Sciences Meeting 2022</h5>
 <iframe height="300" src="https://www.youtube-nocookie.com/embed/6pUlNjiFMSU?rel=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%"></iframe>
 
 </div>
