add art of science image

--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@ I have taken to making Twitter Posters as a way of quickly and simply communicat
 		<div class="w3-half">
 			<img src="/images/gallery/fulbright.jpg" style="width:90%">
 			<img src="/images/gallery/government_house.jpg" style="width:90%">
+			<img src="/images/gallery/AoS2022.jpg" style="width:90%">
 		</div>
 	</div>
 
