--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@ Boundary currents; Western boundary currents; Deep western boundary currents; Ob
 
 <h3>Publications <a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">(Google Scholar)</a></h3>
 <p>
+Chandler M, Zilberman NV, Sprintall J. (2022). Seasonal to decadal western boundary current variability from sustained ocean observations. <i>Geophysical Research Letters.</i> <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022GL097834">DOI: 10.1029/2022GL097834</a>
+</p>
+<p>
 Floerl O, Atalah J, Bugnot AB, Chandler M, Dafforn KA, Floerl L, Zaiko A, Major R. (2021). A global model to forecast coastal hardening and mitigate associated socioecological risks. <i>Nature Sustainability.</i> <a href="https://www.nature.com/articles/s41893-021-00780-w">DOI: 10.1038/s41893-021-00780-w</a>
 </p>
 <p>
