wbc twitter poster

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@ Twitter posters were brought to my attention by Mike Morrison and were conceived
 I have taken to making Twitter Posters as a way of quickly and simply communicating the key findings from my work to a broad audience. These Twitter Posters are all available on my twitter, and I have included direct links to each Twitter Poster below.
 <ul>
   <li><a href="https://twitter.com/nz_mitch/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
+  <li><a href="https://twitter.com/nz_mitch/status/1539312070092390403">WBC sustained observations (Chandler et al. 2022)</a></li>
 </ul>
 </p>
 
@@ -256,7 +257,7 @@ I have taken to making Twitter Posters as a way of quickly and simply communicat
 			<img src="/tposters/placeholder.gif" style="width:100%">
 		</div>
 		<div class="w3-half">
-			<img src="/tposters/placeholder.gif" style="width:100%">
+			<img src="/tposters/WBC_2022.gif" style="width:100%">
 			<img src="/tposters/placeholder.gif" style="width:100%">
 		</div>
 	</div>
