--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ img.head-image { width: 100%;max-width: 600px; }
 		<a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ&hl=en" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="material-icons w3-xlarge">school</i></a>
 		<a href="https://github.com/mlchandler" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-github"></i></a>
 		<a href="https://www.youtube.com/channel/UCDf3c6vKdb-xWtU-5fRzx8A/" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-youtube-play"></i></a>
+		<a href="https://www.linkedin.com/in/mitchell-chandler-po/" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-linkedin-square"></i></a>
 		<a href="https://twitter.com/nz_mitch" class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right w3-xlarge" ><i class="fa fa-twitter"></i></a>      
 		
 		<div id="navSmall" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
@@ -108,6 +109,8 @@ img.head-image { width: 100%;max-width: 600px; }
 	<i class="fa fa-github-square w3-xlarge"></i></a>
 	<a href="https://www.youtube.com/channel/UCDf3c6vKdb-xWtU-5fRzx8A/" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
 	<i class="fa fa-youtube-play w3-xlarge"></i></a>
+	<a href="https://www.linkedin.com/in/mitchell-chandler-po/" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
+	<i class="fa fa-linkedin-square w3-xlarge"></i></a></p>
 	<a href="https://twitter.com/nz_mitch" class="w3-button w3-padding-large w3-hover-black w3-hide-small">
 	<i class="fa fa-twitter-square w3-xlarge"></i></a></p>
 	<img src="/images/MC_header.jpg" class="head-image">
