adding Art of Science

--- a/index.html
+++ b/index.html
@@ -177,11 +177,6 @@ Floerl O, Atalah J, Bugnot AB, Chandler M, Dafforn KA, Floerl L, Zaiko A, Major 
 Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zealand: mean, variability, and trends. <i>New Zealand Journal of Marine and Freshwater Research.</i> <a href="https://tandfonline.com/doi/10.1080/00288330.2019.1629467">DOI: 10.1080/00288330.2019.1629467</a>
 </p>
 
-<h3>Reports</h3>
-<p> 
-Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>. <a href=" https://escholarship.org/uc/item/7pg5m20c">UC eScholarship</a>
-</p>
-
 <h3>Talks</h3>
 <p>
 The arteries and veins of our ocean. (2022). <i>UC San Diego Grad Slam 2022.</i> <span style="color: #FFD700">*Finalist*</span> <a href="slides/Chandler_GradSlam2022.pdf">[slides]</a> <a href="https://youtu.be/Ypyz2wVxun4">[youtube]</a>
@@ -214,6 +209,14 @@ A multi-platform approach to examining variability in the Kuroshio off the coast
 </p>
 <p> 
 Towards a basin-scale observing network for monitoring upper-ocean mass and temperature variability. (2020). <i>Ocean Sciences Meeting 2020.</i> <a href="posters/Chandler_OSM2020.pdf">[pdf]</a>
+</p>
+
+<h3>Other</h3>
+<p> 
+Chandler M. (2022). A non-quiescent ocean. <i>UC San Diego</i>. <a href="https://exhibits.ucsd.edu/starlight/artofscience/feature/2022-honorable-mentions">UC San Diego Art of Science Judges Honourable Mention</a> [Art Piece]
+</p>
+<p> 
+Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>. <a href="https://escholarship.org/uc/item/7pg5m20c">UC eScholarship</a> [Report]
 </p>
 
 </div>
