--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 
 <h3>Other</h3>
 <p> 
-Chandler M. (2022). A non-quiescent ocean. <i>UC San Diego</i>. <a href="https://exhibits.ucsd.edu/starlight/artofscience/feature/2022-honorable-mentions">UC San Diego Art of Science Judges Honourable Mention</a> [Art Piece]
+A non-quiescent ocean. (2022). <i>UC San Diego Art of Science 2022</i>. <a href="https://exhibits.ucsd.edu/starlight/artofscience/feature/2022-honorable-mentions">DOI coming soon</a> <span style="color: #FFD700">*Judges Honourable Mention*</span> [Art Piece] 
 </p>
 <p> 
 Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>. <a href="https://escholarship.org/uc/item/7pg5m20c">UC eScholarship</a> [Report]
