--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 
 <h3>Other</h3>
 <p> 
-<b>[Art Piece]</b> A non-quiescent ocean. (2022). <i>UC San Diego Art of Science 2022</i>. <span style="color: #FFD700">*Judges Honourable Mention*</span> (DOI coming soon), <a href="https://exhibits.ucsd.edu/starlight/artofscience/feature/2022-honorable-mentions">2022 contest</a>   
+<b>[Art Piece]</b> A non-quiescent ocean. (2022). <i>UC San Diego Art of Science 2022</i>. <span style="color: #FFD700">*Judges Honourable Mention*</span> (DOI coming soon), <a href="https://exhibits.ucsd.edu/starlight/artofscience/feature/2022-honorable-mentions">2022 contest site</a>   
 </p>
 <p> 
 <b>[Report]</b> Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>. <a href="https://escholarship.org/uc/item/7pg5m20c">UC eScholarship</a> 
