--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 
 <h3>Other</h3>
 <p> 
-<b>[Art Piece]</b> A non-quiescent ocean. (2022). <i>UC San Diego Art of Science 2022</i>. <span style="color: #FFD700">*Judges Honourable Mention*</span> <a href="https://doi.org/10.6075/J0N29X4D">DOI: 10.6075/J0N29X4D</a>   
+<b>[Art Piece]</b> A non-quiescent ocean. (2022). <i>UC San Diego Art of Science 2022</i>. <a href="https://doi.org/10.6075/J0N29X4D">DOI: 10.6075/J0N29X4D</a> <span style="color: #FFD700">*Judges Honourable Mention*</span>    
 </p>
 <p> 
 <b>[Report]</b> Chandler M, Zilberman NV, Sprintall J. (2021). Combining complementary observing systems to produce a basin-scale network for monitoring upper-ocean transport. <i>UC San Diego: Scripps Institution of Oceanography</i>. <a href="https://escholarship.org/uc/item/7pg5m20c">UC eScholarship</a> 
