--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 </p>
 
 <h3>Talks</h3>
+<p> 
+20,000 feet under the sea: Using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>New Zealand Physical Oceanography Workshop 2020.</i>
+</p>
 <p>
 The arteries and veins of our ocean. (2022). <i>UC San Diego Grad Slam 2022.</i> <span style="color: #FFD700">*Finalist*</span> <a href="slides/Chandler_GradSlam2022.pdf">[slides]</a> <a href="https://youtu.be/Ypyz2wVxun4">[youtube]</a>
 </p>
