--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 
 <h3>Talks</h3>
 <p> 
+20,000 feet under the sea: Using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>Scripps Student Symposium 2022.</i>
+</p>
+<p> 
 20,000 feet under the sea: Using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>New Zealand Physical Oceanography Workshop 2022.</i>
 </p>
 <p>
