--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ I have taken to making Twitter Posters as a way of quickly and simply communicat
 		<div class="w3-half">
 			<img src="/images/gallery/fulbright.jpg" style="width:90%">
 			<img src="/images/gallery/government_house.jpg" style="width:90%">
-			<img src="/images/gallery/AoS2022.png" style="width:90%">
+			<img src="/images/gallery/TheNat_art.jpg" style="width:90%">
 		</div>
 	</div>
 
