--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ I have taken to making Twitter Posters as a way of quickly and simply communicat
 			<img src="/images/gallery/sioc218.jpeg" style="width:90%">	
 		</div>
 		<div class="w3-half">
-			<img src="/images/gallery/OSM2020.jpg" style="width:90%">
+			<img src="/images/gallery/OSM2020_cropped.jpg" style="width:90%">
 			<img src="/images/gallery/government_house.jpg" style="width:90%">
 			<img src="/images/gallery/fulbright.jpg" style="width:90%">
 		</div>
