--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@ img.head-image { width: 100%;max-width: 600px; }
 
 <hr style="width:200px" class="w3-opacity">
 <p> 
-I am a third-year physical oceanography graduate student at Scripps Institution of Oceanography advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and am the recipient of a Fulbright student fellowship.
+I am a physical oceanography PhD candidate at Scripps Institution of Oceanography advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and am the recipient of a Fulbright student fellowship.
 </p>
 
 <p>
-My thesis work aims to combine observations from multiple observing systems to produce estimates of velocity between the ocean surface and 1975-m depth over longer time periods than most other subsurface velocity time series. These estimates are used to examine trends and variability in western boundary currents, which are major ocean currents found at the western boundaries of ocean basins. Part of my work also aims to examine relationships between western boundary current variability and the occurrence of marine heatwaves (periods of anomalously warm water). These heatwave events can have devastating consequences on weather, fisheries, and marine ecosystems.
+My thesis work aims to examine western boundary currents, both subtropical western boundary currents in the upper-ocean and deep western boundary currents in the deep-ocean. To do so I draw on data from a number of different but complementary ocean observing systems including Argo, high-resolution expendable bathythermographs (HR-XBTs), and remote sensing, as well as reanalysis products. These western boundary currents - located on the western side of the major ocean basins such as along the eastern coastlines of USA and Japan - influence regional weather, climate, ocean temperature, and sea level and therefore impact on both ecosystems and society at the western boundaries of the ocean.
 </p>
 
 <p>
@@ -136,7 +136,7 @@ Originally from New Zealand, I completed my BSc at the University of Otago in 20
 
 <h4>Research Interests</h4>
 <p>
-Boundary currents; Western boundary currents; Deep western boundary currents; Observational oceanography; Argo; Southwest Pacific oceanography; Marine heatwaves
+Boundary currents; Western boundary currents; Deep western boundary currents; Observational oceanography; Argo; Remote sensing; Southwest Pacific oceanography
 </p>
 
 </div>
