--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@ img.head-image { width: 100%;max-width: 600px; }
 
 <hr style="width:200px" class="w3-opacity">
 <p> 
-I am a physical oceanography PhD candidate at Scripps Institution of Oceanography advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and am the recipient of a Fulbright student fellowship.
+I am a PhD candidate in physical oceanography at Scripps Institution of Oceanography advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and was also the recipient of a Fulbright student fellowship.
 </p>
 
 <p>
-My thesis work aims to examine western boundary currents, both subtropical western boundary currents in the upper-ocean and deep western boundary currents in the deep-ocean. To do so I draw on data from a number of different but complementary ocean observing systems including Argo, high-resolution expendable bathythermographs (HR-XBTs), and remote sensing, as well as reanalysis products. These western boundary currents - located on the western side of the major ocean basins such as along the eastern coastlines of USA and Japan - influence regional weather, climate, ocean temperature, and sea level and therefore impact on both ecosystems and society at the western boundaries of the ocean.
+My thesis work aims to examine western boundary currents, both subtropical western boundary currents in the upper-ocean and deep western boundary currents in the deep-ocean. To do so I draw on data from a number of different but complementary ocean observing systems as well as reanalysis products. These western boundary currents - located on the western side of the major ocean basins - influence regional weather, climate, ocean temperature, and sea level and therefore impact on both ecosystems and society at the western boundaries of the ocean.
 </p>
 
 <p>
