--- a/index.html
+++ b/index.html
@@ -123,20 +123,20 @@ img.head-image { width: 100%;max-width: 600px; }
 
 <hr style="width:200px" class="w3-opacity">
 <p> 
-I am a PhD candidate in physical oceanography at Scripps Institution of Oceanography advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and was also the recipient of a Fulbright student fellowship.
+I am a PhD candidate in physical oceanography at Scripps Institution of Oceanography advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and was the recipient of a Fulbright student fellowship.
 </p>
 
 <p>
-My thesis work aims to examine western boundary currents, both subtropical western boundary currents in the upper-ocean and deep western boundary currents in the deep-ocean. To do so I draw on data from a number of different but complementary ocean observing systems as well as reanalysis products. These western boundary currents - located on the western side of the major ocean basins - influence regional weather, climate, ocean temperature, and sea level and therefore impact on both ecosystems and society at the western boundaries of the ocean.
+My thesis work examines western boundary currents. This focus includes both subtropical western boundary currents in the upper-ocean and deep western boundary currents in the deep-ocean. Western boundary currents are located on the western side of the major ocean basins and are hugely important for ecosystems and people due to the influence that these currents have on regional weather, climate, ocean temperature, and sea level. To conduct this work I draw on data from a number of different but complementary ocean observing systems as well as reanalysis products.
 </p>
 
 <p>
-Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. For my BSc(Hons) I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current, which is a poleward-flowing boundary current off of south-west New Zealand. My advisors for this work were <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Robert Smith</a> (Otago).
+Originally from New Zealand, I completed my BSc at the University of Otago in 2017 and did a further Honours year at the University of Auckland in 2018. For my BSc(Hons) I used satellite altimetry to examine trends and variability in the surface expression of the Fiordland Current, a poleward-flowing eastern boundary current alongside south-west New Zealand. My advisors for this work were <a href="https://unidirectory.auckland.ac.nz/profile/m-bowen">Melissa Bowen</a> (Auckland) and <a href="https://www.otago.ac.nz/marinescience/people/staff/otago664247.html">Robert Smith</a> (Otago).
 </p>
 
 <h4>Research Interests</h4>
 <p>
-Boundary currents; Western boundary currents; Deep western boundary currents; Observational oceanography; Argo; Remote sensing; Southwest Pacific oceanography
+Ocean circulation; Boundary currents; Western boundary currents; Deep western boundary currents; Observational oceanography; Argo; Deep Argo; Remote sensing; Pacific Ocean; Southwest Pacific oceanography
 </p>
 
 </div>
@@ -254,11 +254,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <h2>Twitter Posters</h2>
 <hr style="width:200px" class="w3-opacity">
 <p>
-Twitter posters were brought to my attention by Mike Morrison and were conceived as an alternative to conferences cancelled as a result of the covid-19 pandemic. These Twitter Posters are intended to be a relatively low effort (after all you have already done the hard work of conducting your research!) way of communicating science to a wider group of people using GIFs to present a series of simple slides on twitter. For more information about Twitter Posters see Mike's youtube video (<a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">LINK</a>) where he also provides templates to create your own!
-</p>
-
-<p>
-I have taken to making Twitter Posters as a way of quickly and simply communicating the key findings from my work to a broad audience. These Twitter Posters are all available on my twitter, and I have included direct links to each Twitter Poster below.
+Twitter posters present a series of simple slides and are a relatively low effort way of effectively communicating the science you have done to a wider audience. Direct links to the Twitter posters I have made and tweeted are given below:
 <ul>
   <li><a href="https://twitter.com/nz_mitch/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
   <li><a href="https://twitter.com/nz_mitch/status/1539312070092390403">WBC sustained observations (Chandler et al. 2022)</a></li>
@@ -276,6 +272,10 @@ I have taken to making Twitter Posters as a way of quickly and simply communicat
 			<img src="/tposters/placeholder.gif" style="width:100%">
 		</div>
 	</div>
+
+<p>
+For more information on Twitter Posters I recommend this <a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">youtube video</a> by Mike Morrison, which introduced me to the idea.
+</p>
 
 </div>
 
