--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ img.head-image { width: 100%;max-width: 600px; }
 
 <hr style="width:200px" class="w3-opacity">
 <p> 
-I am a PhD candidate in physical oceanography at Scripps Institution of Oceanography advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and was the recipient of a Fulbright student fellowship.
+I am a PhD candidate in physical oceanography at Scripps Institution of Oceanography, where I am advised by <a href="https://nzilberman.scrippsprofiles.ucsd.edu/">Nathalie Zilberman</a> and <a href="https://jsprintall.scrippsprofiles.ucsd.edu/">Janet Sprintall</a>, and was the recipient of a Fulbright student fellowship.
 </p>
 
 <p>
@@ -254,7 +254,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <h2>Twitter Posters</h2>
 <hr style="width:200px" class="w3-opacity">
 <p>
-Twitter posters present a series of simple slides and are a relatively low effort way of effectively communicating the science you have done to a wider audience. Direct links to the Twitter posters I have made and tweeted are given below:
+Twitter posters present a series of simple slides and are a relatively low effort way to effectively communicate research you have done to a wider audience. The links below are for the Twitter posters I have produced:
 <ul>
   <li><a href="https://twitter.com/nz_mitch/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
   <li><a href="https://twitter.com/nz_mitch/status/1539312070092390403">WBC sustained observations (Chandler et al. 2022)</a></li>
@@ -274,7 +274,7 @@ Twitter posters present a series of simple slides and are a relatively low effor
 	</div>
 
 <p>
-For more information on Twitter Posters I recommend this <a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">youtube video</a> by Mike Morrison, which introduced me to the idea.
+For more information on Twitter Posters I recommend <a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">this youtube video</a> by Mike Morrison.
 </p>
 
 </div>
