--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Towards a basin-scale observing network for monitoring upper-ocean mass and temp
 <h2>Twitter Posters</h2>
 <hr style="width:200px" class="w3-opacity">
 <p>
-Twitter posters present a series of simple slides and are a relatively low effort way to effectively communicate research you have done to a wider audience. The links below are for the Twitter posters I have produced:
+Twitter posters present a series of simple slides and are a relatively low effort way to effectively communicate research you have done to a wider audience. My Twitter posters are linked below:
 <ul>
   <li><a href="https://twitter.com/nz_mitch/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
   <li><a href="https://twitter.com/nz_mitch/status/1539312070092390403">WBC sustained observations (Chandler et al. 2022)</a></li>
