added pdfs of published papers

--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@ Ocean circulation; Boundary currents; Western boundary currents; Deep western bo
 
 <h3>Publications <a href="https://scholar.google.com/citations?user=w3B4oXkAAAAJ">(Google Scholar)</a></h3>
 <p>
-Chandler M, Zilberman NV, Sprintall J. (2022). Seasonal to decadal western boundary current variability from sustained ocean observations. <i>Geophysical Research Letters.</i> <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022GL097834">DOI: 10.1029/2022GL097834</a>
+Chandler M, Zilberman NV, Sprintall J. (2022). Seasonal to decadal western boundary current variability from sustained ocean observations. <i>Geophysical Research Letters.</i> <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022GL097834">DOI: 10.1029/2022GL097834</a> <a href="papers/Chandler_et_al_2022.pdf">[pdf]</a> 
 </p>
 <p>
-Floerl O, Atalah J, Bugnot AB, Chandler M, Dafforn KA, Floerl L, Zaiko A, Major R. (2021). A global model to forecast coastal hardening and mitigate associated socioecological risks. <i>Nature Sustainability.</i> <a href="https://www.nature.com/articles/s41893-021-00780-w">DOI: 10.1038/s41893-021-00780-w</a>
+Floerl O, Atalah J, Bugnot AB, Chandler M, Dafforn KA, Floerl L, Zaiko A, Major R. (2021). A global model to forecast coastal hardening and mitigate associated socioecological risks. <i>Nature Sustainability.</i> <a href="https://www.nature.com/articles/s41893-021-00780-w">DOI: 10.1038/s41893-021-00780-w</a> <a href="papers/Floerl_et_al_2021.pdf">[pdf]</a>
 </p>
 <p>
-Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zealand: mean, variability, and trends. <i>New Zealand Journal of Marine and Freshwater Research.</i> <a href="https://tandfonline.com/doi/10.1080/00288330.2019.1629467">DOI: 10.1080/00288330.2019.1629467</a>
+Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zealand: mean, variability, and trends. <i>New Zealand Journal of Marine and Freshwater Research.</i> <a href="https://tandfonline.com/doi/10.1080/00288330.2019.1629467">DOI: 10.1080/00288330.2019.1629467</a> <a href="papers/Chandler_et_al_2019.pdf">[pdf]</a>
 </p>
 
 <h3>Talks</h3>
