remove grad slam slides

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Chandler M, Bowen M, Smith RO. (2019). The Fiordland Current, southwest New Zeal
 20,000 feet under the sea: Using Deep Argo to study the Deep Western Boundary Current of the Southwest Pacific Basin. (2022). <i>New Zealand Physical Oceanography Workshop 2022.</i>
 </p>
 <p>
-The arteries and veins of our ocean. (2022). <i>UC San Diego Grad Slam 2022.</i> <span style="color: #FFD700">*Finalist*</span> <a href="slides/Chandler_GradSlam2022.pdf">[slides]</a> <a href="https://youtu.be/Ypyz2wVxun4">[youtube]</a>
+The arteries and veins of our ocean. (2022). <i>UC San Diego Grad Slam 2022.</i> <span style="color: #FFD700">*Finalist*</span> <a href="https://youtu.be/Ypyz2wVxun4">[youtube]</a>
 </p>
 <p>
 Examining western boundary current variability using a consistent multi-platform approach. (2022). <i>Ocean Sciences Meeting 2022.</i> <a href="slides/Chandler_OSM2022.pdf">[slides]</a> <a href="https://www.youtube.com/watch?v=6pUlNjiFMSU">[youtube]</a>
