--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Measuring the subtropical western boundary currents of the Indo-Pacific. (2020).
 
 <h3>Posters</h3>
 <p> 
-Transport trends and seasonality from observations in the Kuroshio, Agulhas Current, and East Australian Current. (2023). <i>International Workshop on Western Boundary Current-Subtropical Continental Shelf Interactions.</i> <a href="posters/Chandler_WBC-STCS2023.pdf">[pdf]</a> 
+Transport trends and seasonality from observations in the Kuroshio, Agulhas Current, and East Australian Current. (2023). <i>International Workshop on Western Boundary Current-Subtropical Continental Shelf Interactions.</i> <a href="posters/Chandler_WBC-STCS2023.pdf">[pdf]</a> <a href="https://www.youtube.com/watch?v=d9r1FzRGSqo">[youtube]</a> 
 </p>
 <p> 
 A multi-platform approach to examining variability in the Kuroshio off the coast of Japan. (2021). <i>Graduate Climate Conference 2021.</i> 
