Deep Argo photoshoot image

--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 			<img src="/images/gallery/OSM2020_cropped.jpg" style="width:90%">
 			<img src="/images/gallery/government_house.jpg" style="width:90%">
 			<img src="/images/gallery/fulbright.jpg" style="width:90%">
+			<img src="/images/gallery/DeepArgo_ErikJepsenUCSD.jpg" style="width:90%">
+			<p>Erik Jepsen/UCSD</p>
 		</div>
 	</div>
 
