--- a/index.html
+++ b/index.html
@@ -296,13 +296,12 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 		<div class="w3-half">
 			<img src="/images/gallery/TheNat_art.jpg" style="width:90%">
 			<img src="/images/gallery/sioc218.jpeg" style="width:90%">	
+			<img src="/images/gallery/DeepArgo_ErikJepsenUCSD.jpg" style="width:90%"> <p>Image credit: Erik Jepsen/UCSD</p>
 		</div>
 		<div class="w3-half">
 			<img src="/images/gallery/OSM2020_cropped.jpg" style="width:90%">
 			<img src="/images/gallery/government_house.jpg" style="width:90%">
 			<img src="/images/gallery/fulbright.jpg" style="width:90%">
-			<img src="/images/gallery/DeepArgo_ErikJepsenUCSD.jpg" style="width:90%">
-			<p>Erik Jepsen/UCSD</p>
 		</div>
 	</div>
 
