Add photo credit

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 		<div class="w3-half">
 			<img src="/images/gallery/TheNat_art.jpg" style="width:90%">
 			<img src="/images/gallery/sioc218.jpeg" style="width:90%">	
-			<img src="/images/gallery/DeepArgo_ErikJepsenUCSD.jpg" style="width:90%"> <p>Image credit: Erik Jepsen/UCSD</p>
+			<img src="/images/gallery/DeepArgo_ErikJepsenUCSD.jpg" style="width:90%" title="Image credit: Erik Jepsen/UC San Diego">
 		</div>
 		<div class="w3-half">
 			<img src="/images/gallery/OSM2020_cropped.jpg" style="width:90%">
