--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@ For more information on Twitter Posters I recommend <a href="https://www.youtube
 		</div>
 		<div class="w3-half">
 			<img src="/images/gallery/OSM2020_cropped.jpg" style="width:90%">
-			<img src="/images/gallery/government_house.jpg" style="width:90%">
-			<img src="/images/gallery/fulbright.jpg" style="width:90%">
+			<img src="/images/gallery/government_house.jpg" style="width:90%" title="Image credit: McGuinness Institute">
+			<img src="/images/gallery/fulbright.jpg" style="width:90%" title="Image credit: Fulbright New Zealand">
 		</div>
 	</div>
 
